--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,10 +1,3 @@
 {{ block "meta" . }}{{ partial "head/meta" . }}{{ end }}
-{{ block "postcss" . }}{{ partial "postcss" "css/main.css" }}{{ end }}
-
-{{- $styles := resources.Get "css/override.css" -}}
-{{- if eq hugo.Environment "development" -}}
-<link rel="stylesheet" href="{{ $styles.RelPermalink }}">
-{{ else -}}
-{{- $styles := $styles | minify | fingerprint | resources.PostProcess -}}
-<link rel="stylesheet" href="{{ $styles.Permalink }}" integrity="{{ $styles.Data.Integrity }}">
-{{ end -}}
+{{ block "postcss-main" . }}{{ partial "postcss" "css/main.css" }}{{ end }}
+{{ block "postcss-override" . }}{{ partial "postcss" "css/override.css" }}{{ end }}
