update partials based on theme update

--- a/layouts/partials/list/default.html
+++ b/layouts/partials/list/default.html
@@ -9,7 +9,7 @@
     </div>
     <div class="mt-2">
 			<a class="inline-flex gap-2 text-sm font-semibold items-center text-indigo-500 hover:text-indigo-800 hover:translate-x-1 ease-in-out duration-200" href="{{ .Permalink }}">
-				Read This Article <span class="w-4 h-4 stroke-2">{{ partial "processor/svg" "arrow-right" }}</span>
+				Read This Article <span class="w-4 h-4 stroke-2">{{ partial "handler/svg" "arrow-right" }}</span>
 			</a>
 		</div>
 </article>
